# modbus

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  modbusConfig.cmake.in  package.xml  shell.nix  vcpkg-configuration.json  vcpkg.json
.github/scripts/: sanity_check_version.py
.github/workflows/: build.yml  clang-format.yml  sanity_check_version.yml
cmake/toolchains/: x64-linux-clang.cmake  x64-linux-gcc.cmake
examples/: CMakeLists.txt  client_example.cpp  client_example.cxx  client_example_read_write_registers.cpp  server_example.cpp  server_example.cxx
include/modbus/: client.hpp  constants.hpp  default_handler.hpp  error.hpp  functions.hpp  request.hpp  response.hpp  server.hpp  tcp.hpp
include/modbus/impl/: buffer_size.h  deserialize.hpp  deserialize_base.hpp  deserialize_request.hpp  deserialize_response.hpp  deserialize_tcp.hpp  serialize.hpp  serialize_base.hpp  serialize_request.hpp  serialize_response.hpp  serialize_tcp.hpp
src/: client.cpp  client.cxx  constants.cxx  default_handler.cxx  deserialize.cxx  error.cpp  error.cxx  functions.cxx  modbus.cxx  packet.cxx  serialize.cxx  server.cpp  server.cxx  server_test.cpp  tcp.cxx  test.cpp
src/impl/: deserialize_base.hpp  deserialize_request.hpp  deserialize_response.hpp  deserialize_tcp.hpp  serialize_base.hpp  serialize_request.hpp  serialize_response.hpp  serialize_tcp.hpp
tests/: CMakeLists.txt  deserialization.cpp  deserialization.cxx  integration.cpp  integration.cxx  serialization.cpp  serialization.cxx  speed_debugging.cpp
tests/conformance/: server.cpp
tests/helpers/: mask_write_register.c  mbpoll_request_encoding_sniffer.cpp
vcpkg-overlays/ports/asio/: portfile.cmake  vcpkg.json
vcpkg-overlays/triplets/: x64-linux-clang.cmake  x64-linux-gcc.cmake
